// Sourced from https://github.com/DataDog/agent-payload/blob/master/proto/sbom/sbom.proto

syntax = "proto3";
package appsecpb;

import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";
import "bom-1.4.proto";

option go_package = "github.com/DataDog/dd-go/pb/appsecpb";
option java_package = "com.dd.appsec.pb.sbom"; //needs .pb so spotless is skipped
option java_multiple_files = true;
option java_outer_classname = "SBOMPayloadProto";

// When updating this file:
//  - regenerate the java classes with `mvn clean package -pl pb -Pprotobuf -am -DskipTests`

// SBOMPayload represents the main SBOM payload
message SBOMPayload {
  int32               version = 1;
  string              host = 2;
  optional string     source = 3; // use to know the source of the message: agent, other
  repeated SBOMEntity entities = 4;
  optional string     dd_env = 5;
}

message SBOMEntity {
  SBOMSourceType                     type = 1;
  string                             id = 2; // Unique identifier to be able to correlated and "deduplicate" SBOM
  repeated string                    dd_tags = 7; // datadog tags that will be added by the agent depending of the SBOMSourceType
  optional google.protobuf.Timestamp generatedAt = 3; // the datetime of the SBOM generation
  repeated string                    repo_tags = 4; // the tags of the container image
  bool                               inUse = 5; // Whether the SBOM concerns a running entity (running container) or an inert entity (image not used by any container)
  optional google.protobuf.Duration  generationDuration = 6; // SBOM generation duration (how long it took to generate the SBOM report)
  oneof sbom {
    cyclonedx.v1_4.Bom cyclonedx = 10; // only cyclonedx will be supported initially but putting it optional will allow us to move to another format later
    // spdx.SBOM      spdx      = 11; // SPDX can be added later as any other format.
  }
}

enum SBOMSourceType {
  UNSPECIFIED = 0;
  CONTAINER_IMAGE_LAYERS = 1;
  CONTAINER_FILE_SYSTEM = 2;
  HOST_FILE_SYSTEM = 3;
}
